Update .gitignore configuration
- Refine gitignore rules for better file filtering
- Ensure only essential website files are tracked
- Clean up repository structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
+# Ignore everything by default
+*
+
+# But don't ignore these specific file types and folders
+!*.js
+!*.html
+!*.css
+!images/
+!images/**
+
+# Ignore common system files
+.DS_Store
+Thumbs.db
+
+# Ignore aider files
 .aider*
+
+# Ignore chat history and other temporary files
+chat_history.json
+ASSISTANT_REPLY.txt
